--- a/.env
+++ b/.env
@@ -5,5 +5,5 @@ ALLOWED_HOSTS=*
 DATABASE_NAME=loanpilot
 DATABASE_USER=garry
 DATABASE_PASSWORD=garry
-DATABASE_HOST=db
+DATABASE_HOST=postgres
 DATABASE_PORT=5432
