--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.9'
-
 services:
   postgres:
     image: postgres:15
@@ -12,6 +10,12 @@ services:
 
   backend:
     build: ./backend
+    environment:
+      - DATABASE_NAME=loanpilot
+      - DATABASE_USER=garry
+      - DATABASE_PASSWORD=garry
+      - DATABASE_HOST=postgres  # this MUST match your DB service name
+      - DATABASE_PORT=5432
     command: gunicorn loanpilot.wsgi:application --bind 0.0.0.0:8000
     volumes:
       - ./backend:/app
@@ -23,7 +27,9 @@ services:
       - "8000:8000"
 
   frontend:
-    build: ./frontend
+    build:
+      context: ./frontend                 
+      dockerfile: Dockerfile
     ports:
       - "80:80"
     depends_on:
