--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -10,4 +10,4 @@ RUN npm run build
 # Serve with Nginx
 FROM nginx:alpine
 COPY --from=build /app/build /usr/share/nginx/html
-COPY nginx/default.conf /etc/nginx/conf.d/default.conf
+COPY default.conf /etc/nginx/conf.d/default.conf
