--- a/frontend/default.conf
+++ b/frontend/default.conf
@@ -3,8 +3,8 @@ server {
 
     location / {
         root /usr/share/nginx/html;
-        index index.html;
-        try_files $uri /index.html;
+        index index.html index.htm;
+        try_files $uri $uri/ /index.html;
     }
 
     location /api/ {
